--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   pointer-events: none;
 }
 
-W .App-header {
+w .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -20,13 +20,4 @@ W .App-header {
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
